--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Bangers&family=Lato:wght@300;400&family=Nunito:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bangers&family=Lato:wght@300;400;700;900&family=Nunito:wght@500&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -9,4 +9,94 @@
 
 a {
   text-decoration: none;
+}
+
+header h1 {
+  color: #1abaef;
+  font-family: "Nunito", sans-serif;
+  font-size: 2.5rem;
+  text-align: center;
+}
+
+main {
+  text-align: center;
+}
+main h2 {
+  color: #3a4168;
+  font-size: 2.2rem;
+}
+main h3 {
+  color: #1abaef;
+  font-size: 1.75rem;
+}
+main p {
+  font-size: 1.25rem;
+}
+
+nav {
+  height: 10vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+header {
+  width: 85%;
+  height: 55vh;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 0 auto;
+  width: 85%;
+  height: 50vh;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 4rem;
+  font-family: "Bangers", cursive;
+  letter-spacing: 1.7px;
+  width: 175px;
+  height: 65px;
+  padding: 5px 10px;
+}
+
+.btn-light {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 175px;
+  height: 75px;
+  border: 2px solid #3a4168;
+  border-radius: 10px;
+  font-weight: 900;
+  font-size: 1.75rem;
+  padding: 5px 10px;
+}
+
+.btn-dark {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 250px;
+  height: 75px;
+  background-color: #3a4168;
+  border-radius: 10px;
+  font-weight: 900;
+  font-size: 1.75rem;
+  color: #fafafa;
+  padding: 10px 30px;
 }
