--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Bangers&family=Lato:wght@300;400&family=Nunito:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bangers&family=Lato:wght@300;400;700;900&family=Nunito:wght@500&display=swap");
 
 $color-primary: #3a4168;
 $color-secondary: #1abaef;
@@ -22,4 +22,28 @@ $fw-regular: 400;
 
 a {
   text-decoration: none;
+}
+
+header {
+  h1 {
+    color: $color-secondary;
+    font-family: $font-title;
+    font-size: 2.5rem;
+    text-align: center;
+  }
+}
+
+main {
+  text-align: center;
+  h2 {
+    color: $color-primary;
+    font-size: 2.2rem;
+  }
+  h3 {
+    color: $color-secondary;
+    font-size: 1.75rem;
+  }
+  p {
+    font-size: 1.25rem;
+  }
 }
