--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -25,11 +25,17 @@ a {
 }
 
 header {
+  * {
+    margin-top: 40px;
+  }
   h1 {
     color: $color-secondary;
     font-family: $font-title;
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     text-align: center;
+  }
+  img {
+    height: 700px;
   }
 }
 
@@ -37,13 +43,31 @@ main {
   text-align: center;
   h2 {
     color: $color-primary;
-    font-size: 2.2rem;
+    font-size: 3rem;
   }
   h3 {
     color: $color-secondary;
-    font-size: 1.75rem;
+    font-size: 2.5rem;
   }
   p {
-    font-size: 1.25rem;
+    font-size: 2rem;
+  }
+}
+
+.product-info {
+  h2 {
+    font-size: 2rem;
+  }
+  p {
+    font-size: 1.75rem;
+  }
+  p > i {
+    font-weight: 300;
+  }
+}
+
+footer {
+  a {
+    font-size: 1.75rem;
   }
 }
