--- a/main.css
+++ b/main.css
@@ -11,11 +11,17 @@ a {
   text-decoration: none;
 }
 
+header * {
+  margin-top: 40px;
+}
 header h1 {
   color: #1abaef;
   font-family: "Nunito", sans-serif;
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   text-align: center;
+}
+header img {
+  height: 700px;
 }
 
 main {
@@ -23,14 +29,28 @@ main {
 }
 main h2 {
   color: #3a4168;
-  font-size: 2.2rem;
+  font-size: 3rem;
 }
 main h3 {
   color: #1abaef;
-  font-size: 1.75rem;
+  font-size: 2.5rem;
 }
 main p {
-  font-size: 1.25rem;
+  font-size: 2rem;
+}
+
+.product-info h2 {
+  font-size: 2rem;
+}
+.product-info p {
+  font-size: 1.75rem;
+}
+.product-info p > i {
+  font-weight: 300;
+}
+
+footer a {
+  font-size: 1.75rem;
 }
 
 nav {
@@ -44,7 +64,6 @@ nav {
 
 header {
   width: 85%;
-  height: 55vh;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -62,11 +81,49 @@ main {
   height: 50vh;
 }
 
+.product-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 20px;
+  justify-content: center;
+  width: 85%;
+  margin: 30px auto 50px;
+}
+.product-info .container {
+  width: 100%;
+}
+.product-info .container .item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.product-info .container .item:nth-child(even) {
+  flex-direction: row-reverse;
+}
+.product-info .container .item img {
+  width: 200px;
+}
+.product-info .container .item p {
+  width: 60%;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 20vh;
+  background-color: #fefcdd;
+}
+
 .logo {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 4rem;
+  font-size: 5rem;
   font-family: "Bangers", cursive;
   letter-spacing: 1.7px;
   width: 175px;
@@ -84,7 +141,6 @@ main {
   border-radius: 10px;
   font-weight: 900;
   font-size: 1.75rem;
-  padding: 5px 10px;
 }
 
 .btn-dark {
@@ -98,5 +154,4 @@ main {
   font-weight: 900;
   font-size: 1.75rem;
   color: #fafafa;
-  padding: 10px 30px;
 }
