--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -9,7 +9,6 @@ nav {
 
 header {
   width: 85%;
-  height: 55vh;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -25,4 +24,46 @@ main {
   margin: 0 auto;
   width: 85%;
   height: 50vh;
+}
+
+.product-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 20px;
+  justify-content: center;
+  width: 85%;
+  margin: 30px auto 80px;
+
+  .container {
+    width: 100%;
+
+    .item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+    }
+
+    .item:nth-child(even) {
+      flex-direction: row-reverse;
+    }
+
+    .item img {
+      width: 200px;
+    }
+    .item p {
+      width: 60%;
+    }
+  }
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 20vh;
+  background-color: $color-background;
 }
