--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -8,6 +8,12 @@
   width: 175px;
   height: 65px;
   padding: 5px 10px;
+
+  @media screen and (max-width: 500px) {
+    width: 120px;
+    height: 50px;
+    font-size: 3rem;
+  }
 }
 
 .btn-light {
@@ -21,6 +27,12 @@
   font-weight: 900;
   font-size: 1.75rem;
   transition: 0.3s;
+
+  @media screen and (max-width: 500px) {
+    width: 120px;
+    height: 50px;
+    font-size: 1.5rem;
+  }
 }
 
 .btn-light:hover {
@@ -40,6 +52,12 @@
   font-size: 1.75rem;
   color: $color-white;
   transition: 0.3s;
+
+  @media screen and (max-width: 500px) {
+    width: 200px;
+    height: 50px;
+    font-size: 1.5rem;
+  }
 }
 
 .btn-dark:hover {
