--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -3,7 +3,13 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  padding: 10px 40px;
+  height: 150px;
+
+  @media screen and (max-width: 500px) {
+    height: 100px;
+    padding: 10px 30px;
+  }
 }
 
 header {
@@ -29,13 +35,16 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 20px;
+  row-gap: 30px;
   justify-content: center;
   width: 85%;
   margin: 70px auto 80px;
 
   .container {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
 
     .item {
       display: flex;
@@ -63,6 +72,10 @@ footer {
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  height: 20vh;
+  height: 170px;
   background-color: $color-background;
+
+  @media screen and (max-width: 520px) {
+    height: 140px;
+  }
 }
